fixed alignment

--- a/scss/_global-menu.scss
+++ b/scss/_global-menu.scss
@@ -8,7 +8,7 @@
   .nav-list {
     li {
       font-size: $font-size-base-pc - 3px;
-      padding: 8%;
+      padding-bottom: 8%;
     }
 
     a {
